--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </div>
     </nav>
     <!-- fin barra de navegación fixed-->
+    
     <!-- cover img página de inicio -->
     <div class="background min-vh-100 d-flex align-items-center">
-        <img src="./img/fotoinicio1.webp"
-            class="img-fluid d-block position-fixed top-50 start-50 translate-middle w-100 h-auto" alt="Imagen de fondo de mujer tatuando">
+        <img src="./img/fotoinicio1.webp" class="img-fluid d-block position-fixed top-50 start-50 translate-middle w-100 h-auto fade-in" alt="Imagen de fondo de mujer tatuando">
         <!-- contenedor blanco con texto y botón -->
         <div class="container">
             <div class="row justify-content-center">
@@ -71,6 +71,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Footer fijo en la parte inferior de la página -->
     <footer class="fixed-bottom bg-dark text-light py-2">
         <div class="container">
