--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../pages/nosotros.html">NOSOTROS</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/encontranos.html">ENCONTRANOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">CONTACTO</a></li>
@@ -52,7 +52,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-5 col-xs-12 order-1 order-lg-2">
-                    <div><img src="../img/perfil1.webp" class="about_img"></div>
+                    <div><img src="../img/perfil1.webp" class="about_img slide-in-top"></div>
                 </div>
                 <div class="col-lg-7 col-xs-12 order-2 order-lg-1">
                     <div class="about_taital_main">
@@ -61,7 +61,7 @@
                             Hola, soy Florencia Diaz, tatuadora y artista plástica.
                             <br>
                             Desde el 2020, dirijo Tinta Néctar, un estudio de tatuajes y piercings en la zona sur de Rosario. 
-                            Mi formación en Bellas Artesen la Universidad Nacional de Rosario me ha permitido llevar mi pasión por el arte a otro nivel.
+                            Mi formación en Bellas Artes en la Universidad Nacional de Rosario me ha permitido llevar mi pasión por el arte a otro nivel.
                             Como tatuadora, mi objetivo es crear diseños únicos y personalizados que reflejen la individualidad de cada cliente. Me especializo en diversos estilos, desde el tradicional
                             hasta el realismo y el puntillismo, y siempre estoy buscando nuevos desafíos para perfeccionar mi técnica.
                             Además de mi trabajo en el mundo de los tatuajes y piercings, también soy una artista plástica versátil y experimentada. Trabajo con diversos medios, desde la pintura hasta el
