--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,7 +41,7 @@
                     <li class="nav-item"><a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/encontranos.html">ENCONTRANOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../pages/contacto.html">CONTACTO</a></li>
                 </ul>
             </div>
         </div>
