--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -38,7 +38,7 @@
                 <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../pages/servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/encontranos.html">ENCONTRANOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">CONTACTO</a></li>
                 </ul>
