--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,10 +4,10 @@
 <html lang="en">
 <!-- inicio cabecera con Bootstrap v5.3  -->
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Contacto y turnos Tinta Néctar Tatuajes">
-    <meta name="keywords" content="tatuajes, piercings, tatuajes en rosario, turnos, tatuadora, tinta néctar, tattoo, tattoo estudio, contacto, turnos">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Contacto y turnos Tinta Néctar Tatuajes" />
+    <meta name="keywords" content="tatuajes, piercings, tatuajes en rosario, turnos, tatuadora, tinta néctar, tattoo, tattoo estudio, contacto, turnos" />
     <title>TNE- Contacto</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="../img/faviconico.ico">
