--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -5,10 +5,10 @@
 <!-- inicio cabecera con Bootstrap v5.3  -->
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Local de Tatuajes y Piercings en Rosario">
-    <meta name="keywords" content="tatuajes, piercings, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Local de Tatuajes y Piercings en Rosario" />
+    <meta name="keywords" content="tatuajes, piercings, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio" />
     <title>TNE- Encontranos</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="../img/faviconico.ico">
