--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,10 +4,10 @@
 <html lang="en">
 <!-- inicio cabecera con Bootstrap v5.3  -->
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Local de Tatuajes, Piercings, venta de suministros de tatuaje en Rosario">
-    <meta name="keywords" content="tatuajes, piercings, suministros, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Local de Tatuajes, Piercings, venta de suministros de tatuaje en Rosario" />
+    <meta name="keywords" content="tatuajes, piercings, suministros, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio" />
     <title>TNE- Servicios</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="../img/faviconico.ico">
