--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -26,13 +26,11 @@
 
 <body>
     <!-- barra de navegación fixed con Bootstrap-->
-    <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #F1AD1F;">
+    <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container-fluid">
-            <!-- logo -->
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/logo.png" alt="Tinta Néctar Estudio">
             </a>
-            <!-- toggler -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
