--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,11 +3,13 @@
 <!-- inicio e idioma -->
 <html lang="en">
 <!-- inicio cabecera con Bootstrap v5.3  -->
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Local de Tatuajes, Piercings, venta de suministros de tatuaje en Rosario" />
-    <meta name="keywords" content="tatuajes, piercings, suministros, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio" />
+    <meta name="keywords"
+        content="tatuajes, piercings, suministros, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio" />
     <title>TNE- Servicios</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="../img/faviconico.ico">
@@ -20,15 +22,14 @@
     <link rel="stylesheet" href="../css//style.css">
 </head>
 <!-- inicio cuerpo -->
+
 <body>
     <!-- barra de navegación fixed con Bootstrap-->
-    <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #F1AD1F;">
+    <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container-fluid">
-            <!-- logo -->
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/logo.png" alt="Tinta Néctar Estudio">
             </a>
-            <!-- toggler -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,7 +47,7 @@
         </div>
     </nav>
     <!-- fin barra de navegación fixed-->
-    
+
     <!-- Portfolio Inicio -->
     <div class="portfolio_servicios">
         <!-- Galería de servicios -->
@@ -96,7 +97,7 @@
                 </div>
             </div>
         </div>
-       
+
         <!-- Galería Tatuajes -->
         <section class="page-section portfolio" id="tatuajes">
             <div class="container">
@@ -568,4 +569,5 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
