--- a/index.html
+++ b/index.html
@@ -3,45 +3,44 @@
 <!-- inicio e idioma -->
 <html lang="en">
 <!-- inicio cabecera con Bootstrap v5.3  -->
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Local de Tatuajes y Piercings en Rosario">
-    <meta name="keywords" content="tatuajes, piercings, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio">
-    </head>
-    <title>Tinta Néctar Estudio</title>
-    <!-- favicon -->
-    <link rel="shortcut icon" href="./img/faviconico.ico">
-    <!-- Bootstrap link CSS en head-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- Fuentes de iconos de Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- estilo -->
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&family=Poppins:wght@100&display=swap"
-        rel="stylesheet">
+    <meta name="description" content="Local de Tatuajes y Piercings en Rosario" />
+    <meta name="keywords"
+        content="tatuajes, piercings, tatuajes en rosario, tatuadora, tinta néctar, tattoo, tattoo estudio" />
+</head>
+<title>Tinta Néctar Estudio</title>
+<!-- favicon -->
+<link rel="shortcut icon" href="./img/faviconico.ico">
+<!-- Bootstrap link CSS en head-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<!-- Fuentes de iconos de Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+<!-- estilo -->
+<link rel="stylesheet" href="./css/style.css">
+<!-- fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&family=Poppins:wght@100&display=swap"
+    rel="stylesheet">
 </head>
 <!-- inicio cuerpo -->
+
 <body>
     <!-- barra de navegación fixed con Bootstrap-->
-    <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #F1AD1F;">
+    <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container-fluid">
-            <!-- logo -->
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="./index.html">
                 <img src="./img/logo.png" alt="Tinta Néctar Estudio">
             </a>
-            <!-- toggler -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- links -->
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a></li>
                     <li class="nav-item"><a class="nav-link" href="./pages/servicios.html">SERVICIOS</a></li>
@@ -52,10 +51,12 @@
         </div>
     </nav>
     <!-- fin barra de navegación fixed-->
-    
+
     <!-- cover img página de inicio -->
     <div class="background min-vh-100 d-flex align-items-center">
-        <img src="./img/fotoinicio1.webp" class="img-fluid d-block position-fixed top-50 start-50 translate-middle w-100 h-auto fade-in" alt="Imagen de fondo de mujer tatuando">
+        <img src="./img/fotoinicio1.webp"
+            class="img-fluid d-block position-fixed top-50 start-50 translate-middle w-100 h-auto fade-in"
+            alt="Imagen de fondo de mujer tatuando">
         <!-- contenedor blanco con texto y botón -->
         <div class="container">
             <div class="row justify-content-center">
@@ -71,7 +72,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Footer fijo en la parte inferior de la página -->
     <footer class="fixed-bottom bg-dark text-light py-2">
         <div class="container">
@@ -94,4 +95,5 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
