--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -51,61 +51,54 @@
     <!-- fin barra de navegación fixed-->
     <div class="donde_encontrarnos">
         <!-- Sección  Nuestro Local + carousel-->
-        <div class="galeria-local bg-dark text-light">
+          <div class="galeria-local bg-dark text-light">
             <div class="container-fluid">
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-6" style="height: 100%;">
-                        <div class="local_info">
-                            <h1 class="titulo_local text-center">Tinta Néctar Estudio</h1>
-                            <p class="texto_local">Si estás buscando un lugar donde puedas hacerte un tatuaje o un
-                                piercing de calidad, además de encontrar todos los insumos que necesitas para tatuar, Tinta
-                                Néctar es el lugar indicado. Estamos ubicados en la zona sur de Rosario, y te garantizamos un
-                                espacio donde te sentirás cómodo y seguro para expresarte a través del arte corporal. Nuestro
-                                local cuenta con un equipo de tatuadores y piercers profesionales, comprometidos con brindarte
-                                un servicio de excelencia y un trabajo único y personalizado. Además, podrás adquirir todos
-                                los insumos necesarios para tatuar, como agujas, tintas y máquinas, entre otros. Vení a
-                                visitarnos y descubrí todo lo que podemos hacer juntos.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                    class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                    aria-label="Slide 2"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                    aria-label="Slide 3"></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="../img/Local/01-pexels-pavel-danilyuk-6593420.webp" class="d-block w-100"
-                                        alt="Tatuaje 1">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="../img/Local/02-pexels-cottonbro-studio-4123707.webp"
-                                        class="d-block w-100" alt="Tatuaje 2">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="../img/Local/03-pexels-antoni-shkraba-7005732.webp" class="d-block w-100"
-                                        alt="Tatuaje 3">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
-                    </div>
+              <div class="row justify-content-center align-items-center">
+                <div class="col-lg-6 custom-col">
+                  <div class="local_info">
+                    <h1 class="titulo_local text-center">Tinta Néctar Estudio</h1>
+                    <p class="texto_local">Si estás buscando un lugar donde puedas hacerte un tatuaje o un
+                        piercing de calidad, además de encontrar todos los insumos que necesitas para tatuar, Tinta
+                        Néctar es el lugar indicado. Estamos ubicados en la zona sur de Rosario, y te garantizamos un
+                        espacio donde te sentirás cómodo y seguro para expresarte a través del arte corporal. Nuestro
+                        local cuenta con un equipo de tatuadores y piercers profesionales, comprometidos con brindarte
+                        un servicio de excelencia y un trabajo único y personalizado. Además, podrás adquirir todos
+                        los insumos necesarios para tatuar, como agujas, tintas y máquinas, entre otros. Vení a
+                        visitarnos y descubrí todo lo que podemos hacer juntos.</p>
+                  </div>
                 </div>
+                <div class="col-lg-6 custom-col">
+                  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../img/Local/01-pexels-pavel-danilyuk-6593420.webp" class="d-block w-100" alt="Tatuaje 1">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/Local/02-pexels-cottonbro-studio-4123707.webp" class="d-block w-100" alt="Tatuaje 2">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/Local/03-pexels-antoni-shkraba-7005732.webp" class="d-block w-100" alt="Tatuaje 3">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
+          </div>
+          
 
         <!-- sección Datos -->
         <div class="container-fluid" style="background-color: #dd9877;">
